--- a/mvpDemo/app/src/main/AndroidManifest.xml
+++ b/mvpDemo/app/src/main/AndroidManifest.xml
@@ -8,18 +8,19 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.MaterialDesign">
         <activity android:name=".MainActivity">
 
         </activity>
         <activity android:name=".activity.ArticleActivity">
-        </activity>
-        <activity android:name=".activity.TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.TestActivity">
+
         </activity>
     </application>
 
