--- a/mvpDemo/app/build.gradle
+++ b/mvpDemo/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.google.code.gson:gson:2.8.0'
+
+    compile 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
 }
