--- a/mvpDemo/app/src/main/AndroidManifest.xml
+++ b/mvpDemo/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.frame.huxh.mvpdemo">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialDesign">
         <activity android:name=".MainActivity">
-
         </activity>
         <activity android:name=".activity.ArticleActivity">
             <intent-filter>
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.TestActivity">
-
+        </activity>
+        <activity android:name=".activity.ActicleListActivity">
         </activity>
     </application>
 
